// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectSwitcher /> should render properly with data 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-left: 16px;
  height: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  border: 0;
  margin: 0;
  padding: 0;
  color: #82be3c;
  background-color: #2e2e2e;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-0 {
  margin-left: 8px;
}

<div
  className="emotion-2"
>
  <button
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    qwerty
    <svg
      className="emotion-0"
      data-file-name="chevron.svg"
      width={20}
    />
  </button>
</div>
`;

exports[`<ProjectSwitcher /> should render properly with data 2`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-left: 16px;
  height: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  border: 0;
  margin: 0;
  padding: 0;
  color: #82be3c;
  background-color: #2e2e2e;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-0 {
  margin-left: 8px;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-3 {
  position: absolute;
  z-index: 1;
  top: 24px;
  left: 0;
  min-width: 100%;
  border-radius: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: #404040;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-2 {
  padding-top: 8px;
  padding-right: 48px;
  padding-bottom: 8px;
  padding-left: 16px;
  color: #b2b2b2;
  background-color: #404040;
  font-size: 14px;
  border: 0;
  width: 100%;
  text-align: left;
}

.emotion-2:hover {
  background-color: #808080;
  color: #ffffff;
  cursor: pointer;
}

<div
  className="emotion-4"
>
  <button
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    qwerty
    <svg
      className="emotion-0"
      data-file-name="chevron.svg"
      width={20}
    />
  </button>
  <div
    className="emotion-3"
  >
    <button
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      asdf
    </button>
  </div>
</div>
`;

exports[`<ProjectSwitcher /> should render properly with data 3`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-left: 16px;
  height: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  border: 0;
  margin: 0;
  padding: 0;
  color: #82be3c;
  background-color: #2e2e2e;
}

.emotion-1:hover {
  cursor: pointer;
}

.emotion-0 {
  margin-left: 8px;
}

<div
  className="emotion-2"
>
  <button
    className="emotion-1"
    onClick={[Function]}
    type="button"
  >
    qwerty
    <svg
      className="emotion-0"
      data-file-name="chevron.svg"
      width={20}
    />
  </button>
</div>
`;

exports[`<ProjectSwitcher /> should render properly without data 1`] = `null`;
